2005-09-28  Gabor Csardi  <csardi@szaffi>

	* igraph/R/games.R (degree.sequence.game) : undirected bug
	corrected

	* igraph/R/basic.R (is.directed) : new function

2005-09-28  Gabor Csardi  <csardi@rmki.kfki.hu>

	* igraph/R/structural.properties.R (get.shortest.paths) : from is
	a required parameter

	* igraph/R/plot.R (plot.igraph) : graph argument renamed to x to
	be conform with the R generic

	* igraph/R/print.R (print.igraph, summary.igraph) : arguments
	renamed to be conform with the R generic

	* igraph/R/community.R (eb.comunity, eb.community2)
	(cut.community) : renamed to community.eb, community.eb2,
	community.cut

2005-09-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/types.c (stack_t, stack_*) : renamed to igraph_stack_t
	* src/types.h (stack_t, stack_*) : same
	* src/structural_properties.c (stack_t, stack_*) : same

2005-09-26  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_average_path_length) :
	normfact double instead of long int, the saga of this bug ends here

	* src/random.c (fsign, imax2, imin2, R_FINITE, ISNAN) : new, from
	the R source code

2005-09-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/layout.c (igraph_layout_fruchterman_reingold) : implemented
	in C based on the SNA 1.0 version
	* src/rinterface.c (R_igraph_layout_fruchterman_reingold) : interface
	* igraph/R/layout.R (layout.fruchterman.reingold) : interface
	* igraph/R/tkplot.R (.tkplot.layout.dialog) : new parameter type,
	expression, this may depend on the graph itself, the 
	Fruchterman-Reingold algorithm has new parameters

2005-09-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/conversion.c (igraph_get_edgelist) : new function
	* src/rinterface.c (R_igraph_get_edgelist) : interface
	* igraph/R/conversion.R (get.edgelist) : interface

	* src/conversion.c (igraph_get_adjacency) : new function
	* src/rinterface.c (R_igraph_get_adjacency) : interface
	* igraph/R/conversion.R (get.adjacency) : interface
